syntax = "proto3";
package coreum.asset.ft.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/CoreumFoundation/coreum/x/asset/ft/types";

// Params store gov manageable parameters.
message Params {
  // issue_fee is the fee burnt each time new token is issued
  cosmos.base.v1beta1.Coin issue_fee = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"issue_fee\""
  ];

  // ibc_decision_timeout defines the end of the decision period for enabling IBC
  google.protobuf.Timestamp token_upgrade_decision_timeout = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"token_upgrade_decision_timeout\""
  ];

  // ibc_grace_period defines the period after which IBC is effectively enabled
  google.protobuf.Duration token_upgrade_grace_period = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags) = "yaml:\"token_upgrade_grace_period\""
  ];
}
